# ivc-program

./: Cargo.toml
src/: input.rs  lib.rs  program.rs  witness.rs
src/bellpepper/: ivc.rs  mod.rs  variables.rs
test_folder/invert/: program.json  step_0.wit  step_1.wit
