[package]
name = "ivc-program"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = { version = "0.13.0", features = ["derive"] }
bellpepper-core = { version = "0.4.0", default-features = false }

serde = "1.0"
thiserror = "1.0"

nova-snark = {version = "0.37.0", default-features = false}

[dev-dependencies]
halo2curves = "0.6.0"
serde_json = "1.0"