[package]
edition = "2021"
name = "ivc-program"
version = "0.1.0"

[dependencies]
bellpepper-core = {version = "0.4.0", default-features = false}
ff = {version = "0.13.0", features = ["derive"]}

serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
halo2curves = "0.6.0"
nova-snark = {version = "0.37.0", default-features = false}
serde_json = "1.0"
